#FE18 Ask for conformation when deleting client

--- a/src/app/ajaarvestus/ajaarvestus.component.html
+++ b/src/app/ajaarvestus/ajaarvestus.component.html
@@ -1,1 +1,12 @@
-<p>ajaarvestus works!</p>
+<div class="history_container">
+    <table>
+        <tbody>
+           <tr fxLayout="row" fxLayoutGap="5px">        
+                <td>task</td>
+                <td>client</td>
+                <td>time<mat-icon>edit</mat-icon><mat-icon>close</mat-icon></td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- <button (click)= getClients()>KLIENDID</button> -->
+</div>
