--- a/src/app/dokumendid/dokumendid.component.html
+++ b/src/app/dokumendid/dokumendid.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<!-- <div class="form-group">
     <label for="file">Vali fail üleslaadimiseks</label>
     <input type="file"
            id="file"
@@ -11,4 +11,4 @@
         <li>kirja-plank.doc<mat-icon>arrow_downward</mat-icon></li>
         <li>firma.doc<mat-icon>arrow_downward</mat-icon></li>
     </ul>
-</div>
+</div> -->
