--- a/src/app/kalender-pop-up/kalender-pop-up.component.html
+++ b/src/app/kalender-pop-up/kalender-pop-up.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="form">
 
 
-        <mat-form-field>
+        <mat-form-field >
             <input matInput formControlName="task" class="placeholder" required placeholder="Sisesta sündmus">
             <ul *ngFor="let item of dataArray">
                 <li>{{item.Task}}</li>
@@ -15,13 +15,13 @@
 
         <div class="dialog_container">
             <div class="calendar-wrapper">
-            <mat-calendar [dateClass]="dateClass()" [selected]="form.get('eventDate').value"
-                    (selectedChange)="getSelectedDate($event)" #calendar>
+            <mat-calendar [dateClass]="dateClass()" [selected]="theDate"
+                    (selectedChange)="getSelectedDate($event)" #calendar [(selected)]="selectedDate">
                 </mat-calendar>
             </div>
 
             <div class="timepicker">
-                <ngb-timepicker ngModel="time" (ngModelChange)="logTime($event)"></ngb-timepicker>
+                <ngb-timepicker [ngModel]="time" [ngModelOptions]="{standalone: true}" (ngModelChange)="logTime($event)"></ngb-timepicker>
             </div>
         </div>
     </form>
@@ -31,5 +31,5 @@
 
     <button class="mat-raised-button" (click)="close()">Close</button>
     <button [disabled]="!form.dirty" class="mat-raised-button mat-primary" (click)="save()">Save</button>
-    <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
+
 </div>
