--- a/src/app/toimikud/toimikud.component.html
+++ b/src/app/toimikud/toimikud.component.html
@@ -1,5 +1,5 @@
-<p>toimikud works!</p>
+<!-- <p>toimikud works!</p>
 
 <h2>{{ dateObj | date:'MMMM d' }}</h2>
 
-<h5>{{date}}</h5>
+<h5>{{date}}</h5> -->
