--- a/src/app/isikud/isikud.component.html
+++ b/src/app/isikud/isikud.component.html
@@ -1,4 +1,4 @@
-<!-- <app-search></app-search> -->
+<app-search></app-search>
 <div class="client_container">
     <mat-icon (click)=openAddClient() color="accent">add_box</mat-icon>
     <table>
