--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,3 @@
-@import "base/typography";
 
 .mainBar {
   padding: 10px;
@@ -17,14 +16,12 @@
     outline: 0 !important;
   }
 }
-.logo-active {
- 
-}
+
 .navbar {
   margin: 30px;
   align-self: center;
   height: 68px;
-  border: 1px solid $primary-blue;
+  border: 1px solid var(--text-primary);
   border-radius: 20px;
   //background-color: $primary-bg;
   background-color: var(--background-secondary);
@@ -37,7 +34,7 @@
   width: 100%;
   //background-color: yellow;
   height: 30px;
-  box-shadow: inset 6px 0px 3px -5px $primary-bg;
+  box-shadow: inset 6px 0px 3px -5px var(--background-secondary);
   transform: skewX(-35deg);
   padding-left: 3%;
   border-left: 1px solid var(--text-grey);
@@ -89,6 +86,7 @@
     width: 120px; 
 
   }
+
 }
 .toggle{
   margin-top: 5px;
@@ -111,4 +109,3 @@
   }
   cursor: pointer;
 }
-
