--- a/src/styles/themes/_theme.scss
+++ b/src/styles/themes/_theme.scss
@@ -42,6 +42,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 // dialog-box global style
 .calendarBox {
@@ -62,3 +63,4 @@ body {
     padding: 0;
   }
 }
+
